--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ taskipy = "^1.12.2"
 pytest = "^7.4.4"
 httpx = "^0.26.0"
 pandas = "^2.2.0"
+pydantic = "^2.5.3"
 
 
 [build-system]
@@ -20,4 +21,5 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.taskipy.tasks]
-test1 = "pytest -v testes.py"
+test1 = "pytest -v"
+run = "uvicorn app.main:app --reload"
