--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ pytest = "^7.4.4"
 httpx = "^0.26.0"
 pandas = "^2.2.0"
 pydantic = "^2.5.3"
+python-dotenv = "^1.0.1"
+sqlalchemy = "^2.0.26"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
